# fastapi-shield

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  compliance_governance.db  conftest.py  console.db  dashboard.db  debug_permission.py  debug_test.py  enterprise_soar.db  mkdocs.yaml  netlify.toml  noxfile.py  performance_test.py  prompt_agent_shield.py  pyproject.toml  requirements-dev.txt  requirements-docs.txt  test_integration.db  test_ml_detection.db  test_threat_hunting.db  test_ztna.db  threat_intelligence.db
.github/workflows/: build_wheels.yaml  release-check.yaml  tests.yaml
PRDs/tickets/: 0002-enhance-generator-shield-tests.md  0006-ip-geolocation-shield.md  0007-cache-control-shield.md  0008-audit-logging-shield.md  0011-circuit-breaker-shield.md  0018-multi-factor-auth-shield.md  0019-api-versioning-shield.md  0020-request-tracing-shield.md  0022-database-connection-shield.md  0023-feature-flag-shield.md  0024-performance-monitoring-shield.md  0025-json-schema-validation-shield.md  0026-oauth2-pkce-shield.md  0029-health-check-shield.md  0031-shield-composition-optimizer.md  0032-shield-testing-framework.md  0034-shield-metrics-dashboard.md  0035-shield-cli-tools.md  0036-shield-documentation-generator.md  0038-shield-middleware-bridge.md  0039-shield-plugin-system.md  0040-shield-security-audit.md  0044-shield-async-context-management.md  0046-shield-response-postprocessing.md  0047-shield-conditional-execution.md  0050-shield-machine-learning-security.md  0052-shield-edge-computing-support.md  0062-ai-powered-security-intelligence-behavioral-analytics.md
docs/: index.md  middleware_bridge.md  performance_optimization.md
docs/advanced-topics/: background-tasks.md  dependency-injection.md  deployment.md  error-handling.md  jwt-authentication.md  method-interception.md  performance.md  production-deployment.md  security-best-practices.md  testing.md  type-inheritance.md
docs/api/: constants.md  depends.md  index.md  interceptors.md  newtype.md  openapi.md  shield-depends.md  shield-factory.md  shield.md  shielded-depends-factory.md  typing.md  utils.md  validators.md
docs/development/: architecture.md  building.md  contributing.md  index.md  roadmap.md  testing.md
docs/examples/: advanced_examples.md  real_world.md  (+4 more)
examples/: auth_jwt_one.py  auth_jwt_two.py  basic_auth_one.py  basic_egs_async_shields.py  basic_egs_features_shield.py  basic_usage_one.py  clean_logic_one.py  custom_initialization_one.py  fastapi_deco_fail.py  fastapi_deco_fail_two.py  fastapi_deco_works.py  fastapi_shield_works.py  fastapi_shield_works_two.py  first_shield.py  lazy_depends_one.py  lazy_depends_two.py  multi_auth_one.py  oauth_scopes_one.py
examples/app/: README.md  pyproject.toml
examples/app/src/app/: __init__.py  app.py  database.py  main.py  models.py  shields.py  test_app.py
tests/: Dockerfile  Dockerfile-test-py3.10  Dockerfile-test-py3.11  Dockerfile-test-py3.12  Dockerfile-test-py3.9  build_test_pyvers_docker_images.sh  conftest.py  random_data1.csv  random_data2.csv  test_api_documentation_shield.py  test_api_key_rotation_shield.py  test_api_versioning_shield.py  test_async_context.py  test_async_performance.py  test_audit_logging_shield.py  test_auth_examples_documentation.py  test_authentication_examples.py  test_basics.py  test_basics_three.py  test_basics_two.py  test_benchmark.py  test_body.py  test_bot_detection_shield.py  test_cache_control_shield.py  test_circuit_breaker_shield.py  test_comparison_alternatives.py  test_compliance_framework.py  test_compliance_governance.py  test_composition_optimizer.py  test_conditional_execution.py  test_conditional_execution_performance.py  test_config_management.py  test_content_type_validation_shield.py  test_cors_security_shield.py  test_custom_initialization.py  test_custom_request_param_names.py  test_dashboard.py  test_default_query.py  test_dependency_injection.py  test_documentation.py  (+80 more)
(+156 files in other folders)
