[project]
name = "fastapi-shield"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "nox>=2025.2.9",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
]
