[project]
name = "fastapi-shield"
version = "0.1.0"
description = "Shield is a FastAPI decorator that provides a simple shield your API Endpoints."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.3",
]
authors = [
    { name="Jim Chng", email="jimchng@outlook.com" },
]

[tool.hatch.build]
exclude = [
    "tests",
    "examples",
    "docs",
    "scripts",
    "scripts/*",
    "noxfile.py",
    ".gitignore",
    "LICENSE",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "nox>=2025.2.9",
    "passlib>=1.7.4",
    "pydantic>=2.11.3",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "python-multipart>=0.0.20",
    "unicorn>=2.1.3",
]
