[project]
name = "fastapi-shield"
version = "0.2.0"
description = "Shield is a FastAPI decorator that provides a simple shield for your API Endpoints to shield off unwanted requests."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["fastapi>=0.100.1"]
authors = [{ name = "Jim Chng", email = "jimchng@outlook.com" }]

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_shield"]

[tool.hatch.build]
exclude = [
    "assets",
    "tests",
    "examples",
    "docs",
    "scripts",
    "scripts/*",
    "noxfile.py",
    "LICENSE",
    "README.md",
    ".github/*",
    ".pre-commit-config.yaml",
    "requirements-dev.txt",
    "mkdocs.yaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = ["examples", "docs", "scripts", "scripts/*", "noxfile.py", "tests"]

[tool.pylint]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "W0511",  # fixme
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0212",  # protected-access
    "W0703",  # broad-except
]
extension-pkg-whitelist = ["pydantic"]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "U"]
max-line-length = 110
ignore-patterns = ["^\\.#"]
ignore-paths = ["tests/", "examples/", "docs/", "scripts/"]


[dependency-groups]
dev = [
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.100.1",
    "httpx>=0.24.0",
    "isort>=6.0.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.12",
    "mkdocstrings[python]>=0.23.0",
    "nox>=2023.0.0",
    "passlib>=1.7.0",
    "pre-commit>=4.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.0.0",
    "pylint>=3.3.6",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.7.0",
    "python-multipart>=0.0.5",
    "slowapi>=0.1.9",
    "unicorn>=2.0.0",
    "uvicorn>=0.20.0",
]
